第16章机翻完毕

--- a/I would never send my kids to school我永远不会送我的孩子去学校/18.Stress resilience压力适应力.md
+++ b/I would never send my kids to school我永远不会送我的孩子去学校/18.Stress resilience压力适应力.md
@@ -16,7 +16,7 @@ Kids who suffer from separation anxiety when dropped in daycare at the very youn
 
 [Attachment parenting](https://en.wikipedia.org/wiki/Attachment_parenting) is often derided as "stress-free upbringing", while it should rather be seen as a good parenting that indeed helps prevent stress wherever it is harmful for health or brain development.
 
-依恋养育经常被嘲笑为“无压力的抚养”，而它应该被视为一种良好的养育方式，确实有助于预防压力，无论它对健康或大脑发育有害。
+依恋养育经常被嘲笑为「无压力的抚养」，而它应该被视为一种良好的养育方式，确实有助于预防压力，无论它对健康或大脑发育有害。
 
 ## 18.2 Global loss of IQ
 
@@ -36,11 +36,11 @@ The very first step is the need to **clear up the fog surrounding the myth that 
 
 From the proponents of rigors of daycare and schooling, I hear it over and over again: "*How will the kid cope as an adult?*" "*Will he tell the boss "I like to sleep long and work 2 hours only?*".
 
-从日托和学校严谨的支持者那里，我一遍又一遍地听到：“孩子将如何应对成年人？” “他会告诉老板吗？我喜欢长时间睡觉，只工作2个小时？”
+从日托和学校严谨的支持者那里，我一遍又一遍地听到：「孩子将如何应对成年人？」 「他会告诉老板吗？我喜欢长时间睡觉，只工作2个小时？」
 
 [Peter Gray](https://supermemo.guru/wiki/Peter_Gray) put it mildly by saying "*some people believe*" in the supposed myth: "*the very unpleasantness of school is good for children, so they will learn to tolerate unpleasantness as preparation for real life*". Gray's soft claim probably comes from the fact that he comes from the culture where homeschooling is exploding. In Europe, the myth of "*trainability of chronic stress resistance" in children is omnipresent.*
 
-彼得格雷温和地说“有些人相信”所谓的神话：“学校的非常不愉快对孩子有好处，所以他们会学会容忍不愉快作为现实生活的准备”。格雷的软声称可能来自于他来自家庭学校正在爆炸的文化。在欧洲，儿童的“慢性压力抵抗训练”的神话无处不在。
+彼得格雷温和地说「有些人相信」所谓的神话：「学校的非常不愉快对孩子有好处，所以他们会学会容忍不愉快作为现实生活的准备」。格雷的软声称可能来自于他来自家庭学校正在爆炸的文化。在欧洲，儿童的「慢性压力抵抗训练」的神话无处不在。
 
 The reasoning carries a vicious prescription: expose kids to stress to get them ready for adulthood! [Alfie Kohn](http://www.alfiekohn.org/) mocks it: *Punch the kid today because someone might punch her in the future*.
 
@@ -76,7 +76,7 @@ The stress that should be avoided in the evening, when experienced at mid-day, m
 
 Locke and Rousseau have long understood that exposing a kid to a stress of "*season, climates, elements*" is a good thing. This is not adaptation to stress, it is **physiological adaptation** to environmental stressors. Winter swimming might be stressful, and exposure will result in knowledge-based and procedural adaptations. However, there is also a vital physiological component where physiological adaptation to cold exposure takes away the edge from the stressor.
 
-Locke 和 Rousseau 早就明白，让孩子面对“季节，气候，元素”的压力是一件好事。这不适应压力，它是对环境压力因素的生理适应。冬季游泳可能会带来压力，接触将导致基于知识和程序的适应。然而，还存在一种重要的生理学成分，其中对冷暴露的生理适应带走了应激源的边缘。
+Locke 和 Rousseau 早就明白，让孩子面对「季节，气候，元素」的压力是一件好事。这不适应压力，它是对环境压力因素的生理适应。冬季游泳可能会带来压力，接触将导致基于知识和程序的适应。然而，还存在一种重要的生理学成分，其中对冷暴露的生理适应带走了应激源的边缘。
 
 Last but not least there is attenuation and learned helplessness. We can adapt to stress by making the brain stop responding to the stressor. Metaphorically speaking, we can damage and silence portions of the brain. Let's call it: **adaptation via injury**. This is what happens in animals deprived of freedom. This also happens in kids whose freedom is taken away by coercive schooling. At some point, coerced learning is no longer stressful. Children become numb and disinterested.
 
@@ -92,7 +92,7 @@ Many a parent may be tempted to emulate Williams or Polgar accomplishments in to
 
 There are benefits to eustress, and various forms of "stress" are part of a healthy training and development. However, there are no trainable defences against chronic stress, i.e. the one you get with perpetual sleep deprivation, bullying, maternal separation, child abuse, etc. Those are stresses that change the metabolism, and change the wiring of the brain. They correlate well with an increase in mental disease, behavioral disorders, addictions, etc. Chronic stress is the type of stress you go to sleep with. Characterically, this is the stress that does not go away on waking. Its chronic nature is best expressed by the fact that there is no "*rise and shine*". Chronically stressed kid wakes up with a worry. Chronic stress can persist and gnaw at you for days or weeks. Attenuation can be used to reduce the impact of inevitable stress. Professional training helps stress management in stressful jobs. However, the purpose of those is the prevention of chronic stress, procedural adaptation, or knowledge-based adaptation. Professional training does not provide biological resistance to the effects of chronic stress.
 
-积极压力有好处，各种形式的“压力”是健康训练和发展的一部分。然而，没有可训练的抗慢性压力的防御措施，即永久性睡眠剥夺，欺凌，母亲分离，虐待儿童等等。这些是改变新陈代谢和改变大脑布线的压力。它们与精神疾病，行为障碍，成瘾等的增加密切相关。慢性压力是你睡觉时的压力类型。特点是，这是在醒来时不会消失的压力。它的长期性质最好表现在没有“兴起和光彩”的事实。长期紧张的孩子担心醒来。慢性压力可以持续存在并啃几天或几周。衰减可用于减少不可避免的压力的影响。专业培训有助于在压力工作中进行压力管理。然而，这些目的是预防慢性压力，程序适应或基于知识的适应。专业培训不能对慢性压力的影响提供生物抵抗力。
+积极压力有好处，各种形式的「压力」是健康训练和发展的一部分。然而，没有可训练的抗慢性压力的防御措施，即永久性睡眠剥夺，欺凌，母亲分离，虐待儿童等等。这些是改变新陈代谢和改变大脑布线的压力。它们与精神疾病，行为障碍，成瘾等的增加密切相关。慢性压力是你睡觉时的压力类型。特点是，这是在醒来时不会消失的压力。它的长期性质最好表现在没有「兴起和光彩」的事实。长期紧张的孩子担心醒来。慢性压力可以持续存在并啃几天或几周。衰减可用于减少不可避免的压力的影响。专业培训有助于在压力工作中进行压力管理。然而，这些目的是预防慢性压力，程序适应或基于知识的适应。专业培训不能对慢性压力的影响提供生物抵抗力。
 
 ## 18.5 Preparation for adulthood
 
@@ -104,7 +104,7 @@ There are benefits to eustress, and various forms of "stress" are part of a heal
 
 Older psychologists and educators have often been biased by years of analysis of institutionalized children. As a result, they may perpetuate the myth born in the 1950s: "*sour faces in kids are ok because duty and discipline are educational*"! They believe that a well-organized kindergarten group is better than a rowdy sports field crowd of mixed-aged peers. That thinking is directed at preparing the kids to live in the modern adult world.
 
-年龄较大的心理学家和教育工作者经常因为多年来对制度化儿童的分析而产生偏见。结果，他们可能会延续20世纪50年代出生的神话：“孩子们的酸面是好的，因为责任和纪律是教育的”！他们认为，一个组织良好的幼儿园团队比混合年龄段的吵闹运动场人群要好。这种想法旨在让孩子们为现代成人世界做好准备。
+年龄较大的心理学家和教育工作者经常因为多年来对制度化儿童的分析而产生偏见。结果，他们可能会延续20世纪50年代出生的神话：「孩子们的酸面是好的，因为责任和纪律是教育的」！他们认为，一个组织良好的幼儿园团队比混合年龄段的吵闹运动场人群要好。这种想法旨在让孩子们为现代成人世界做好准备。
 
 The opposite is true. Freedom is a better way to shape a better future character. We teach kids to tolerate the reality, while they should rather let their reason figure out what is tolerable and what is welcome in proportion to brain development. Why tolerate toilet, sleep, meal, or sport timing restrictions in violation of the [circadian cycle](https://supermemo.guru/wiki/Good_sleep)? Why tolerate departures from the [natural creativity cycle](https://supermemo.guru/wiki/Natural_creativity_cycle)? It is smarter to be intolerant and learn to adapt in proportion to brain power and one's own intolerance! Let's adapt the world to humans, not the other way around. Children can be a great factor of change in that respect.
 
@@ -112,7 +112,7 @@ The opposite is true. Freedom is a better way to shape a better future character
 
 **Youth should be devoted to brain development**. There is no stronger weapon than a well-developed brain. Learning and "preparation" come easy to a brisk brain. They can proceed in proportion to maturity. They can capitalize on the [learn drive](https://supermemo.guru/wiki/Learn_drive) with minimal assistance from [optimum push](https://supermemo.guru/wiki/Push_zone).
 
-青年应该致力于大脑发育。没有比发达的大脑更强大的武器了。学习和“准备”很容易成为一个活泼的大脑。他们可以按比例成熟。他们可以利用最佳推动的最小帮助来充分利用学习动力。
+青年应该致力于大脑发育。没有比发达的大脑更强大的武器了。学习和「准备」很容易成为一个活泼的大脑。他们可以按比例成熟。他们可以利用最佳推动的最小帮助来充分利用学习动力。
 
 ### 18.5.2 Discipline training
 
@@ -128,7 +128,7 @@ Preparation for adulthood is not only about stress resilience. Many educators cl
 
 Homeschoolers often boast that what they like most about learning at home is that they can get good sleep. **The right to get good sleep should be a basic human right for children**. Some professions involve inevitable sleep deprivation or interference with chronobiology. However, adaptations to "messy sleep" lifestyle are predominantly procedural, not biological. Going to sleep early, and sticking to regular sleep hours are both procedural adaptations. The only significant biological adaptation is the possibility of determining the sleep phase via [chronotherapy](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia). In the course of 2-3 weeks, an owl can be made into an early bird with the tools of chronobiology. This is again procedural adaptation that capitalizes on a single property of the sleep control system: [sleep phase](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia). This is not a biological adaptation that helps reduce the effects of sleep deprivation once it occurs.
 
-家庭教育者经常夸耀他们最喜欢在家学习的是他们可以睡个好觉。获得良好睡眠的权利应该是儿童的基本人权。一些职业涉及不可避免的睡眠剥夺或干扰时间生物学。然而，对“凌乱睡眠”生活方式的适应主要是程序性的，而非生物性的。早睡，坚持正常的睡眠时间都是程序性的适应。唯一重要的生物适应是通过时间疗法确定睡眠阶段的可能性。在2-3周的过程中，可以使用时间生物学工具将猫头鹰制成早起的鸟类。这又是程序性适应，利用睡眠控制系统的单一属性：睡眠阶段。这不是一种生物适应，有助于减少睡眠剥夺的影响。
+家庭教育者经常夸耀他们最喜欢在家学习的是他们可以睡个好觉。获得良好睡眠的权利应该是儿童的基本人权。一些职业涉及不可避免的睡眠剥夺或干扰时间生物学。然而，对「凌乱睡眠」生活方式的适应主要是程序性的，而非生物性的。早睡，坚持正常的睡眠时间都是程序性的适应。唯一重要的生物适应是通过时间疗法确定睡眠阶段的可能性。在2-3周的过程中，可以使用时间生物学工具将猫头鹰制成早起的鸟类。这又是程序性适应，利用睡眠控制系统的单一属性：睡眠阶段。这不是一种生物适应，有助于减少睡眠剥夺的影响。
 
 Torturing kids with an alarm clock to train school discipline is as bad as feeding them with alcohol. Both affect brain structures and permanently change lives. The only difference is that alarm clocks are still socially acceptable.
 
@@ -196,7 +196,7 @@ If optimum stress exposure implies avoiding [chronic stress](https://en.wikipedi
 
 The emphasis must then again go on the "chronic" aspect of chronic stress. Some forms of stress are good. They help learning. Locke and Rousseau spoke of hardening. [Psychology literature uses terms such as inoculating or toughening](https://supermemo.guru/wiki/Chronic,_acute_and_intermittent_stress_exposure). In many circumstances stress is good for learning, development, and mental health. It can indeed lead to improved stress resilience.
 
-然后，重点必须再次放在慢性压力的“慢性”方面。某些形式的压力是好的。他们帮助学习。洛克和卢梭谈到了强化。心理学文献使用诸如接种或增韧之类的术语。在许多情况下，压力有利于学习，发展和心理健康。它确实可以改善压力恢复能力。
+然后，重点必须再次放在慢性压力的「慢性」方面。某些形式的压力是好的。他们帮助学习。洛克和卢梭谈到了强化。心理学文献使用诸如接种或增韧之类的术语。在许多情况下，压力有利于学习，发展和心理健康。它确实可以改善压力恢复能力。
 
 Maternal separation has negative connotations, but we do not aim at making kids dependent on their mom until teen years. Separation is actually a goal of upbringing. In other words, it needs to proceed. It only needs to proceed incrementally and with respect to biological rhythms. The younger the kid, the greater the effect of separation. It should be avoided at times of sleep, or at nursing (before weaning). It should be avoided at times of crisis, incl. daily circadian drop in stress resilience, e.g. before sleep. Other than that, separation and exposure to acute stress can do wonders to healthy development, incl. emotional development. The best formula for incremental separation: let the kid decide!
 
@@ -233,7 +233,7 @@ Personal anecdote. [Why use anecdotes?](https://supermemo.guru/wiki/Why_use_anec
 
 Why am I not outraged at this parental attitude? The reason is that my first swimming lessons were in a very similar category. My brother, 16 years senior, was a great early coach and teacher. He would toss me off a 3-5 meter guard tower to deep water in a lake. I was 6 years old and I could not swim. However, the distance I needed to make was just 2-4 meters to the pier. The best part of the experience was the crowd of spectators who cheered a tiny guy taking a plunge from a height. I was a little showoff and for show I was ready to risk my life. If we review the list of factors affecting the outcome of the experience, I seem to have met all conditions for making it fun, positive and effective. I loved the crowd and cheers. I was not too old to be anxious. It was a middle of a hot day, and I trusted my brother as no one else in the world. It was great. After this radical start, I gradually improved my swimming skills to cross many scary lakes and rivers before my teens. Interestingly, later in life, I became more risk averse and lost some of my resilience, mostly through neglect. Last but not least, I was powerfully impacted by the movie "*The Jaws*". By the time I was 17 years old, swimming across a lake or out into sea would always bring back some scenes from the movie.
 
-为什么我对这种父母态度不感到愤怒？原因是我的第一次游泳课程属于非常相似的类别。我的兄弟，16岁，是一位伟大的早期教练和老师。他会把我从一个3-5米长的警卫塔扔到湖里的深水里。我6岁，我不会游泳。然而，我需要的距离只有2-4米到码头。这次经历的最佳部分是一群观众，他们为一个从高处蹦蹦跳跳的小家伙欢呼。我有点炫耀，为了表演我已经准备好冒险了。如果我们查看影响体验结果的因素列表，我似乎已经满足了使其变得有趣，积极和有效的所有条件。我喜欢人群和欢呼。我不是太老了，不会焦虑。这是一个炎热的一天，我相信我的兄弟是世界上没有其他人。太棒了。在这个激进的开始之后，我逐渐提高了我的游泳技巧，在我十几岁之前穿越了许多可怕的湖泊和河流。有趣的是，在以后的生活中，我变得更加厌恶风险并且失去了一些我的弹性，主要是通过疏忽。最后但并非最不重要的是，我受到电影“大白鲨”的强烈影响。当我17岁的时候，游泳穿过湖泊或者进入大海总会带回电影中的一些场景。
+为什么我对这种父母态度不感到愤怒？原因是我的第一次游泳课程属于非常相似的类别。我的兄弟，16岁，是一位伟大的早期教练和老师。他会把我从一个3-5米长的警卫塔扔到湖里的深水里。我6岁，我不会游泳。然而，我需要的距离只有2-4米到码头。这次经历的最佳部分是一群观众，他们为一个从高处蹦蹦跳跳的小家伙欢呼。我有点炫耀，为了表演我已经准备好冒险了。如果我们查看影响体验结果的因素列表，我似乎已经满足了使其变得有趣，积极和有效的所有条件。我喜欢人群和欢呼。我不是太老了，不会焦虑。这是一个炎热的一天，我相信我的兄弟是世界上没有其他人。太棒了。在这个激进的开始之后，我逐渐提高了我的游泳技巧，在我十几岁之前穿越了许多可怕的湖泊和河流。有趣的是，在以后的生活中，我变得更加厌恶风险并且失去了一些我的弹性，主要是通过疏忽。最后但并非最不重要的是，我受到电影「大白鲨」的强烈影响。当我17岁的时候，游泳穿过湖泊或者进入大海总会带回电影中的一些场景。
 
 [Peter Gray](https://supermemo.guru/wiki/Peter_Gray) advocates trustful parenting. In the present world, it seems awfully hard, but without a degree of risk and hardening, we won't raise a generation of conquerors, astronauts, CEOs or perhaps even Einsteins.
 
@@ -253,7 +253,7 @@ When I was 12, in summer 1974, my mom agreed I took a bike trip on old Polish co
 
 When tiny babies are thrown into an icehole in Ukraine, the reaction of a western mom is nearly universal: horror. As babies are pretty poor at "*planning ahead*", anticipatory chronic stress is not a factor. Therefore, the ultimate litmus test is the baby's response. If temporary shock is promptly replaced with a wide smile or euphoria, this type of acute stress exposure is likely to do a lot of good, in terms of overall health, brain health, and resilience.
 
-当小小的婴儿被扔进乌克兰的一个冰洞时，西方妈妈的反应几乎是普遍的：恐怖。由于婴儿在“提前计划”方面相当差，预期的慢性压力不是一个因素。因此，最终的试金石是宝宝的反应。如果暂时的休克会立即被微笑或兴奋所取代，那么这种类型的急性应激暴露在整体健康，大脑健康和恢复力方面可能会有很大的好处。
+当小小的婴儿被扔进乌克兰的一个冰洞时，西方妈妈的反应几乎是普遍的：恐怖。由于婴儿在「提前计划」方面相当差，预期的慢性压力不是一个因素。因此，最终的试金石是宝宝的反应。如果暂时的休克会立即被微笑或兴奋所取代，那么这种类型的急性应激暴露在整体健康，大脑健康和恢复力方面可能会有很大的好处。
 
 In summary, **we should surround kids with love, shelter them from chronic stress, and keep the mind open when it comes to acute stress and beneficial stress inoculation**. On the other hand, **childhood without exposure to risk and acute stress is less likely to lead to resilience later in life**.
 
@@ -286,7 +286,7 @@ In summary, **we should surround kids with love, shelter them from chronic stres
 - adaptations to stress may be knowledge-based, or procedural
 - 对压力的适应可能是基于知识的，也可能是程序性的
 - stress of schooling is counteracted by learned helplessness. It can be views as "adaptation by injury"
-- 学习的压力被习得性无助所抵消。它可以被视为“受伤的适应”
+- 学习的压力被习得性无助所抵消。它可以被视为「受伤的适应」
 - we should never train kids to adapt to chronic stress. Resistance via adaptation to chronic stress in kids is negligible
 - 我们不应该训练孩子适应慢性压力。通过适应儿童慢性压力的抵抗力可以忽略不计
 - chronic stress resistance training is harmful. Instead of preparing for adulthood, exposure to chronic stress may seriously affect brain development
