测试嵌套目录

--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/00.content-mu-lu.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/00.content-mu-lu.md
@@ -1,15 +1,15 @@
 # 00.Content目录
 
 * [1Introduction](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Introduction)
-* [前言](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我再也不会把孩子送去学校/01.Introduction前言.html)
+* [前言](01.introduction-qian-yan.md##前言)
   * [1.1Failure of schooling](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Failure_of_schooling)
-  * [学校教育的失败](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%89%8D%E8%A8%80)
+  * [学校教育的失败](01.introduction-qian-yan.md###学校教育的失败)
   * [1.2Scrapping the school system](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Scrapping_the_school_system)
-  * [废除学校制度](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%BA%9F%E9%99%A4%E5%AD%A6%E6%A0%A1%E5%88%B6%E5%BA%A6)
+  * [废除学校制度](01.introduction-qian-yan.md###废除学校制度)
   * [1.3Brain-based reform](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Brain-based_reform)
-  * [基于大脑的改革](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%9F%BA%E4%BA%8E%E5%A4%A7%E8%84%91%E7%9A%84%E6%94%B9%E9%9D%A9)
+  * [基于大脑的改革](01.introduction-qian-yan.md###基于大脑的改革)
   * [1.4Love for children](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Love_for_children)
-  * [对孩子的爱](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%AF%B9%E5%AD%A9%E5%AD%90%E7%9A%84%E7%88%B1)
+  * [对孩子的爱](01.introduction-qian-yan.md###对孩子的爱)
   * [1.5Executive Summary](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Executive_Summary)
   * [执行概要](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E6%89%A7%E8%A1%8C%E6%91%98%E8%A6%81)
   * [1.6Kids are not adults in minature](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Kids_are_not_adults_in_minature)
