--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/00.content-mu-lu.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/00.content-mu-lu.md
@@ -1,41 +1,41 @@
 # 00.Content目录
 
 * [1Introduction](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Introduction)
-* [前言](01.introduction-qian-yan.md##前言)
+* [前言](01.introduction-qian-yan.md#前言)
   * [1.1Failure of schooling](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Failure_of_schooling)
-  * [学校教育的失败](01.introduction-qian-yan.md###学校教育的失败)
+  * [学校教育的失败](01.introduction-qian-yan.md#学校教育的失败)
   * [1.2Scrapping the school system](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Scrapping_the_school_system)
-  * [废除学校制度](01.introduction-qian-yan.md###废除学校制度)
+  * [废除学校制度](01.introduction-qian-yan.md#废除学校制度)
   * [1.3Brain-based reform](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Brain-based_reform)
-  * [基于大脑的改革](01.introduction-qian-yan.md###基于大脑的改革)
+  * [基于大脑的改革](01.introduction-qian-yan.md#基于大脑的改革)
   * [1.4Love for children](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Love_for_children)
-  * [对孩子的爱](01.introduction-qian-yan.md###对孩子的爱)
+  * [对孩子的爱](01.introduction-qian-yan.md#对孩子的爱)
   * [1.5Executive Summary](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Executive_Summary)
-  * [执行概要](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E6%89%A7%E8%A1%8C%E6%91%98%E8%A6%81)
+  * [执行概要](01.introduction-qian-yan.md#%E6%89%A7%E8%A1%8C%E6%91%98%E8%A6%81)
   * [1.6Kids are not adults in minature](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Kids_are_not_adults_in_minature)
-  * [孩子不是微型的成年人](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%AD%A9%E5%AD%90%E4%B8%8D%E6%98%AF%E5%BE%AE%E5%9E%8B%E7%9A%84%E6%88%90%E5%B9%B4%E4%BA%BA)
+  * [孩子不是微型的成年人](01.introduction-qian-yan.md#%E5%AD%A9%E5%AD%90%E4%B8%8D%E6%98%AF%E5%BE%AE%E5%9E%8B%E7%9A%84%E6%88%90%E5%B9%B4%E4%BA%BA)
   * [1.7Fundamental law of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fundamental_law_of_learning)
-  * [学习基本定律](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%AD%A6%E4%B9%A0%E5%9F%BA%E6%9C%AC%E5%AE%9A%E5%BE%8B)
+  * [学习基本定律](01.introduction-qian-yan.md#%E5%AD%A6%E4%B9%A0%E5%9F%BA%E6%9C%AC%E5%AE%9A%E5%BE%8B)
   * [1.8Message to our future selves](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Message_to_our_future_selves)
-  * [给我们未来的自己的信息](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E7%BB%99%E6%88%91%E4%BB%AC%E6%9C%AA%E6%9D%A5%E7%9A%84%E8%87%AA%E5%B7%B1%E7%9A%84%E4%BF%A1%E6%81%AF)
+  * [给我们未来的自己的信息](01.introduction-qian-yan.md#%E7%BB%99%E6%88%91%E4%BB%AC%E6%9C%AA%E6%9D%A5%E7%9A%84%E8%87%AA%E5%B7%B1%E7%9A%84%E4%BF%A1%E6%81%AF)
   * [1.9Dangers of early instruction](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Dangers_of_early_instruction)
-  * [早期教育的危险](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E6%97%A9%E6%9C%9F%E6%95%99%E8%82%B2%E7%9A%84%E5%8D%B1%E9%99%A9)
+  * [早期教育的危险](01.introduction-qian-yan.md#早期教育的危险)
   * [1.10Futility of cramming](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Futility_of_cramming)
-  * [徒劳的死记硬背](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%BE%92%E5%8A%B3%E7%9A%84%E6%AD%BB%E8%AE%B0%E7%A1%AC%E8%83%8C)
+  * [徒劳的死记硬背](01.introduction-qian-yan.md#%E5%BE%92%E5%8A%B3%E7%9A%84%E6%AD%BB%E8%AE%B0%E7%A1%AC%E8%83%8C)
   * [1.11Learning skill impotence](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_skill_impotence)
-  * [学习能力的丧失](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%AD%A6%E4%B9%A0%E8%83%BD%E5%8A%9B%E4%B8%A7%E5%A4%B1)
+  * [学习能力的丧失](01.introduction-qian-yan.md#%E5%AD%A6%E4%B9%A0%E8%83%BD%E5%8A%9B%E4%B8%A7%E5%A4%B1)
   * [1.12Grand Education Reform](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Grand_Education_Reform)
-  * [教育大改革](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%AE%8F%E5%A4%A7%E7%9A%84%E6%95%99%E8%82%B2%E6%94%B9%E9%9D%A9)
+  * [教育大改革](01.introduction-qian-yan.md#%E5%AE%8F%E5%A4%A7%E7%9A%84%E6%95%99%E8%82%B2%E6%94%B9%E9%9D%A9)
   * [1.13When school is a blessing](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#When_school_is_a_blessing)
-  * [何时学校的一种眷顾](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E4%BD%95%E6%97%B6%E5%AD%A6%E6%A0%A1%E6%98%AF%E4%B8%80%E7%A7%8D%E7%9C%B7%E9%A1%BE)
+  * [何时学校的一种眷顾](01.introduction-qian-yan.md#%E4%BD%95%E6%97%B6%E5%AD%A6%E6%A0%A1%E6%98%AF%E4%B8%80%E7%A7%8D%E7%9C%B7%E9%A1%BE)
   * [1.14The Optimization Error](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_Optimization_Error)
-  * [优化错误](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E4%BC%98%E5%8C%96%E9%94%99%E8%AF%AF)
+  * [优化错误](01.introduction-qian-yan.md#%E4%BC%98%E5%8C%96%E9%94%99%E8%AF%AF)
   * [1.15Fostering diversity](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fostering_diversity)
-  * [培养多样性](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E5%9F%B9%E5%85%BB%E5%A4%9A%E6%A0%B7%E6%80%A7)
+  * [培养多样性](01.introduction-qian-yan.md#%E5%9F%B9%E5%85%BB%E5%A4%9A%E6%A0%B7%E6%80%A7)
   * [1.16Death of knowledge](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Death_of_knowledge)
-  * [知识的消亡](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E7%9F%A5%E8%AF%86%E7%9A%84%E6%B6%88%E4%BA%A1)
+  * [知识的消亡](01.introduction-qian-yan.md#%E7%9F%A5%E8%AF%86%E7%9A%84%E6%B6%88%E4%BA%A1)
   * [1.17Prediction: Death of schooling](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prediction:_Death_of_schooling)
-  * [预言：学校的死亡](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/01.Introduction%E5%89%8D%E8%A8%80.html#%E9%A2%84%E8%A8%80%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E7%9A%84%E6%B6%88%E4%BA%A1)
+  * [预言：学校的死亡](01.introduction-qian-yan.md#%E9%A2%84%E8%A8%80%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E7%9A%84%E6%B6%88%E4%BA%A1)
 * [2Motto](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Motto)
 * [箴言](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/02.Motto%E7%AE%B4%E8%A8%80.html)
 * [3Brain science](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Brain_science)
